[package]
name = "move-token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "move_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["metadata"] }
bincode = { version = "1.3.3" }
getrandom = { version = "0.2", features = ["custom"] }
winnow="=0.4.1"
toml_datetime="=0.6.3"
mpl-token-metadata = "4.1.2"
